--- a/search.css
+++ b/search.css
@@ -1,7 +1,18 @@
+.search{
+    margin : auto;
+    width: 400px;
+}
+
 .search_form{
-    width: fit-content;
-    margin : 20px auto 20px auto;
+    display: flex;
+    width: 100%;
+    margin : 20px auto 20px 0px;
     border: solid 1px green;
+}
+
+.search_form_text{
+    display: block;
+    width:100%;
 }
 
 .map{
