--- a/search.css
+++ b/search.css
@@ -7,17 +7,11 @@
     display: flex;
     width: 100%;
     margin : 20px auto 20px 0px;
-    border: solid 1px green;
+    background-color: rgb(255, 251, 188);;
 }
 
 .search_form_text{
     display: block;
     width:100%;
-}
-
-.map{
-    width: 400px;
-    height: 400px;
-    margin : 20px auto auto auto;
-    border: solid 1px red;
+    margin: 5px;
 }
