--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -309,7 +309,7 @@ th {
   border-style: solid;
   border-width: 0;
   width:3rem;
-  overflow:hidden;
+  overflow:hidden; /*테이블 글씨가 잘리면 ...으로 표시*/
   text-overflow:ellipsis;
   white-space:nowrap;
 }
