--- a/assets/css/material-kit.css
+++ b/assets/css/material-kit.css
@@ -2755,10 +2755,11 @@ progress {
   padding: 0.5rem 0;
   margin-bottom: 0;
   line-height: 1.5rem;
-  color: #344767;
+  /*color: #344767;*/
   background-color: transparent;
   border: solid transparent;
   border-width: 1px 0;
+  border-radius:0.375rem;
 }
 
 .form-control-plaintext.form-control-sm,
